v8/tests/messages/property-load-megamorphic.out
property-load-megamorphic.js:3: Uncaught TypeError: Cannot read property 'foo' of null
function get_foo(obj) { return obj.foo; }
                                  ^
